avoid truncating hint in header search bar

--- a/app/assets/stylesheets/dsfr.scss
+++ b/app/assets/stylesheets/dsfr.scss
@@ -191,3 +191,10 @@ input[type='radio'] {
 .fr-header__tools .fr-btns-group .fr-btn {
   margin-bottom: 0;
 }
+
+// We increase from 3rem the max-width to avoid truncating hint in header search
+@media (min-width: 62em) {
+  .fr-header__tools .fr-header__search {
+    max-width: 27rem;
+  }
+}
